# embedded_spectogram

./: .gitignore  LICENSE  README.md
Firmware/: CMakeLists.txt  arm-none-eabi-gcc.cmake  main.cpp  startup_stm32f429xx.s  stm32f4xx_it.h
